; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/usbtv/extr_usbtv-core.c_usbtv_disconnect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/usbtv/extr_usbtv-core.c_usbtv_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.usbtv = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_interface*)* @usbtv_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usbtv_disconnect(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.usbtv*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %4 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %5 = call %struct.usbtv* @usb_get_intfdata(%struct.usb_interface* %4)
  store %struct.usbtv* %5, %struct.usbtv** %3, align 8
  %6 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %7 = call i32 @usb_set_intfdata(%struct.usb_interface* %6, i32* null)
  %8 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %9 = icmp ne %struct.usbtv* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %25

11:                                               ; preds = %1
  %12 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %13 = call i32 @usbtv_audio_free(%struct.usbtv* %12)
  %14 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %15 = call i32 @usbtv_video_free(%struct.usbtv* %14)
  %16 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %17 = getelementptr inbounds %struct.usbtv, %struct.usbtv* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @usb_put_dev(i32* %18)
  %20 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %21 = getelementptr inbounds %struct.usbtv, %struct.usbtv* %20, i32 0, i32 1
  store i32* null, i32** %21, align 8
  %22 = load %struct.usbtv*, %struct.usbtv** %3, align 8
  %23 = getelementptr inbounds %struct.usbtv, %struct.usbtv* %22, i32 0, i32 0
  %24 = call i32 @v4l2_device_put(i32* %23)
  br label %25

25:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.usbtv* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @usb_set_intfdata(%struct.usb_interface*, i32*) #1

declare dso_local i32 @usbtv_audio_free(%struct.usbtv*) #1

declare dso_local i32 @usbtv_video_free(%struct.usbtv*) #1

declare dso_local i32 @usb_put_dev(i32*) #1

declare dso_local i32 @v4l2_device_put(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
